--- a/profile_encoding.ipynb
+++ b/profile_encoding.ipynb
@@ -9,23 +9,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "__author__ = 'Meera George'\n",
+    "\"\"\"profile_encoding.py\"\"\"\n",
     "\n",
-    "#profile_encoding.py\n",
+    "\"\"\"This script contains the methods to perform the analysis on the encoding style of the data frame.\"\"\"\n",
     "\n",
-    "#This script contains the methods to perform the analysis on the encoding style of the data frame.\n",
     "import pandas as pd\n",
     "import operator\n",
     "from IPython.display import display,HTML\n",
     "\n",
     "\n",
     "def encoding_analysis(df_column):\n",
+    "    \"\"\"\n",
+    "        Checks the encoding style of the strings and returns if there are any strings with unusual characters.\n",
+    "        Args:\n",
+    "            dataframe (pandas dataframe): Input pandas dataframe\n",
+    "        Returns:\n",
+    "            dict (dict)\n",
+    "        Examples:\n",
+    "            >>> dict = encoding_analysis(dataframe)\n",
+    "            >>> dict['containsUnusualCharacters']\n",
+    "            True\n",
+    "            >>> dict['stringsWithUnusualCharacters']\n",
+    "            >>> dict['unusualStrings']\n",
+    "            \n",
+    "    \"\"\"\n",
     "    dict={}\n",
     "    print('FULL ANALYSIS'+'\\n' + '----------------------------------'+'\\n')\n",
     "    contains_unusual_char=info_compatible_encoding(df_column)\n",
@@ -42,6 +55,16 @@
     "    return dict\n",
     "\n",
     "def info_compatible_encoding(df_column):\n",
+    "    \"\"\"\n",
+    "        Returns if the given data frame has strings that contain unusual characters.\n",
+    "        Args:\n",
+    "            dataframe (pandas dataframe): Input pandas dataframe\n",
+    "        Returns:\n",
+    "            contains_unusual_char (bool)\n",
+    "        Examples:\n",
+    "            >>> info_compatible_encoding(dataframe)\n",
+    "            True\n",
+    "    \"\"\"\n",
     "    col_title = df_column.columns.get_values()[0]\n",
     "    contains_unusual_char = False\n",
     "    dataFrame = df_column\n",
@@ -63,6 +86,14 @@
     "    return contains_unusual_char\n",
     "\n",
     "def info_list_unusal_chars(contains_unusual_char,df_column):\n",
+    "    \"\"\"\n",
+    "        Returns 2 lists of strings with unusual characters and strings along with indicated unusual characters.\n",
+    "        Args:\n",
+    "            contains_unusual_char(bool): Input bool\n",
+    "            dataframe (pandas dataframe): Input pandas dataframe\n",
+    "        Returns:\n",
+    "            (df1,df2) (tuple of pandas dataframes)\n",
+    "    \"\"\"\n",
     "    dataFrame = df_column\n",
     "    col_title = df_column.columns.get_values()[0]\n",
     "    non_ascii_str = []\n",
@@ -91,14 +122,37 @@
     "        return (df1,df2)\n",
     "\n",
     "def print_unusual_str(list):\n",
+    "    \"\"\"\n",
+    "        Returns a dataframe of strings that contain unusual characters.\n",
+    "        Args:\n",
+    "            list (list): Input list\n",
+    "        Returns:\n",
+    "            unusualStringsDataFrame (pandas dataframe)\n",
+    "    \"\"\"\n",
     "    unusualStringsDataFrame = pd.DataFrame(list,columns = ['String'])\n",
     "    return unusualStringsDataFrame\n",
     "\n",
     "def print_mapping_unusual(list):\n",
+    "    \"\"\"\n",
+    "        Returns a dataframe with 2 columns of strings and the unusual characters in each.\n",
+    "        Args:\n",
+    "            list (list): Input list\n",
+    "        Returns:\n",
+    "            stringsWithUnusualChar (pandas dataframe)\n",
+    "    \"\"\"\n",
     "    stringsWithUnusualChar = pd.DataFrame(list,columns = ['String','Unusual Character'])\n",
     "    return stringsWithUnusualChar\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
