--- a/profile_encoding.ipynb
+++ b/profile_encoding.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +26,8 @@
     "\n",
     "def encoding_analysis(df_column):\n",
     "    \"\"\"\n",
-    "        Checks the encoding style of the strings and returns if there are any strings with unusual characters.\n",
+    "        Checks the encoding style of the strings and returns if there are any strings \n",
+    "        with unusual characters.\n",
     "        Args:\n",
     "            dataframe (pandas dataframe): Input pandas dataframe\n",
     "        Returns:\n",
@@ -87,7 +88,8 @@
     "\n",
     "def info_list_unusal_chars(contains_unusual_char,df_column):\n",
     "    \"\"\"\n",
-    "        Returns 2 lists of strings with unusual characters and strings along with indicated unusual characters.\n",
+    "        Returns 2 lists of strings with unusual characters and strings along \n",
+    "        with indicated unusual characters.\n",
     "        Args:\n",
     "            contains_unusual_char(bool): Input bool\n",
     "            dataframe (pandas dataframe): Input pandas dataframe\n",
@@ -134,7 +136,8 @@
     "\n",
     "def print_mapping_unusual(list):\n",
     "    \"\"\"\n",
-    "        Returns a dataframe with 2 columns of strings and the unusual characters in each.\n",
+    "        Returns a dataframe with 2 columns of strings and the \n",
+    "        unusual characters in each.\n",
     "        Args:\n",
     "            list (list): Input list\n",
     "        Returns:\n",
