--- a/profile_numericalanalysis.ipynb
+++ b/profile_numericalanalysis.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "__author__ = 'Meera George'\n",
+    "\"\"\"profile_numericalanalysis.py\"\"\"\n",
     "\n",
-    "#profile_numericalanalysis.py\n",
-    "\n",
-    "#This script contains the methods to perform the analysis on the numerical values of the data frame.\n",
+    "\"\"\"This script contains the methods to perform the analysis on the numerical values of the data frame.\"\"\"\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pandas_profiling as pp\n",
@@ -20,6 +18,14 @@
     "from IPython.display import display,HTML\n",
     "\n",
     "def numerical_analysis(df_column):\n",
+    "    \"\"\"\n",
+    "    Returns whether the dataframe is of type numeric, is a hybrid of numerical and non-numerical values,\n",
+    "    profile report of the numerical data.\n",
+    "    Args:\n",
+    "        dataframe (pandas dataframe): Input pandas dataframe\n",
+    "    Returns:\n",
+    "        dict (dict)\n",
+    "    \"\"\"\n",
     "    dict={}\n",
     "    df_column,isNumeric,isHybrid = find_type(df_column)\n",
     "    dict['isNumeric'] = isNumeric\n",
@@ -29,6 +35,13 @@
     "    return dict\n",
     "\n",
     "def find_type(df_column):\n",
+    "    \"\"\"\n",
+    "    Returns whether the dataframe is of type numeric, is a hybrid of numerical and non-numerical values.\n",
+    "    Args:\n",
+    "        dataframe (pandas dataframe): Input pandas dataframe\n",
+    "    Returns:\n",
+    "        (dataframe,bool,bool): Tuple of pandas dataframe,bool,bool\n",
+    "    \"\"\"\n",
     "    #Initialize all needed values\n",
     "    col_title = df_column.columns.get_values()[0]\n",
     "    isNumeric = False\n",
@@ -45,6 +58,13 @@
     "    return (df_column,isNumeric,isHybrid)\n",
     "        \n",
     "def checkIfNumericTypeCast(df_column):\n",
+    "    \"\"\"\n",
+    "    Checks whether the dataframe values can be typecast to type numeric and returns the dataframe.\n",
+    "    Args:\n",
+    "        dataframe (pandas dataframe): Input pandas dataframe\n",
+    "    Returns:\n",
+    "        (df_column,isNumeric): Tuple of pandas dataframe,bool\n",
+    "    \"\"\"\n",
     "    col_title = df_column.columns.get_values()[0]\n",
     "    isNumeric = True\n",
     "    try:\n",
@@ -54,6 +74,13 @@
     "    return (df_column,isNumeric)\n",
     "\n",
     "def checkIfHybridType(df_column):\n",
+    "    \"\"\"\n",
+    "    Returns whether the dataframe consists of numeric and non-numeric values.\n",
+    "    Args:\n",
+    "        dataframe (pandas dataframe): Input pandas dataframe\n",
+    "    Returns:\n",
+    "        bool\n",
+    "    \"\"\"\n",
     "    col_title = df_column.columns.get_values()[0]\n",
     "    col_series = []\n",
     "    col_series  = pd.to_numeric(df_column[col_title],errors='coerce')\n",
