--- a/profile_valuelengthanalysis.ipynb
+++ b/profile_valuelengthanalysis.ipynb
@@ -2,22 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "__author__ = 'Meera George'\n",
+    "\"\"\"profile_valuelengthanalysis.py\"\"\"\n",
     "\n",
-    "#profile_valuelengthanalysis.py\n",
+    "\"\"\"This script contains the methods to plots histogram on the value lengths.\"\"\"\n",
     "\n",
-    "#This script contains the methods to plots histogram on the value lengths.\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def histogramValueLengths(df):\n",
+    "    \"\"\"\n",
+    "    Returns histogram on length of values in dataframe.\n",
+    "    Args:\n",
+    "        dataframe (pandas dataframe): Input pandas dataframe\n",
+    "    Returns:\n",
+    "        histogram ()\n",
+    "    \"\"\"\n",
     "    col_title = df.columns.get_values()[0]\n",
     "    df['Length'] = df[col_title].str.len()\n",
     "    plt.hist(df['Length'], bins=100)\n",
@@ -25,6 +31,15 @@
     "    return histogram\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
