--- a/profile_encoding.ipynb
+++ b/profile_encoding.ipynb
@@ -1,163 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Data Profiling on <b>encoding style</b> of <i>pandas</i> dataframe of strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\"profile_encoding.py\"\"\"\n",
-    "\n",
-    "\"\"\"This script contains the methods to perform the analysis on the encoding style of the data frame.\"\"\"\n",
-    "\n",
-    "import pandas as pd\n",
-    "import operator\n",
-    "from IPython.display import display,HTML\n",
-    "\n",
-    "\n",
-    "def encoding_analysis(df_column):\n",
-    "    \"\"\"\n",
-    "        Checks the encoding style of the strings and returns if there are any strings \n",
-    "        with unusual characters.\n",
-    "        Args:\n",
-    "            dataframe (pandas dataframe): Input pandas dataframe\n",
-    "        Returns:\n",
-    "            dict (dict)\n",
-    "        Examples:\n",
-    "            >>> dict = encoding_analysis(dataframe)\n",
-    "            >>> dict['containsUnusualCharacters']\n",
-    "            True\n",
-    "            >>> dict['stringsWithUnusualCharacters']\n",
-    "            >>> dict['unusualStrings']\n",
-    "            \n",
-    "    \"\"\"\n",
-    "    dict={}\n",
-    "    print('FULL ANALYSIS'+'\\n' + '----------------------------------'+'\\n')\n",
-    "    contains_unusual_char=info_compatible_encoding(df_column)\n",
-    "    if contains_unusual_char:\n",
-    "        df1,df2 = info_list_unusal_chars(contains_unusual_char,df_column)\n",
-    "        print('The strings that contain the unusual characters are:')\n",
-    "        display(df1)\n",
-    "        print('The strings with the indicated unusual characters are:')\n",
-    "        display(df2)\n",
-    "    #Storing the return values in dictionary\n",
-    "    dict['containsUnusualCharacters'] = contains_unusual_char\n",
-    "    dict['unusualStrings'] = df1\n",
-    "    dict['stringsWithUnusualCharacters'] = df2\n",
-    "    return dict\n",
-    "\n",
-    "def info_compatible_encoding(df_column):\n",
-    "    \"\"\"\n",
-    "        Returns if the given data frame has strings that contain unusual characters.\n",
-    "        Args:\n",
-    "            dataframe (pandas dataframe): Input pandas dataframe\n",
-    "        Returns:\n",
-    "            contains_unusual_char (bool)\n",
-    "        Examples:\n",
-    "            >>> info_compatible_encoding(dataframe)\n",
-    "            True\n",
-    "    \"\"\"\n",
-    "    col_title = df_column.columns.get_values()[0]\n",
-    "    contains_unusual_char = False\n",
-    "    dataFrame = df_column\n",
-    "    for index, row in dataFrame.iterrows():\n",
-    "        curr_attr = row[col_title]\n",
-    "        try:\n",
-    "            curr_attr.encode('ascii')\n",
-    "        except ValueError as error:\n",
-    "            contains_unusual_char = True\n",
-    "            break\n",
-    "#             if \"\\\\x\" in ascii(curr_attr):\n",
-    "#                 contains_unusual_char = True\n",
-    "    if contains_unusual_char:\n",
-    "        print('The data frame contains unusual characters')\n",
-    "        results.append('Unusual characters present: Yes\\n')\n",
-    "    else:\n",
-    "        print('The data frame does not contain unusual characters')\n",
-    "        results.append('Unusual characters present: No\\n')\n",
-    "    return contains_unusual_char\n",
-    "\n",
-    "def info_list_unusal_chars(contains_unusual_char,df_column):\n",
-    "    \"\"\"\n",
-    "        Returns 2 lists of strings with unusual characters and strings along \n",
-    "        with indicated unusual characters.\n",
-    "        Args:\n",
-    "            contains_unusual_char(bool): Input bool\n",
-    "            dataframe (pandas dataframe): Input pandas dataframe\n",
-    "        Returns:\n",
-    "            (df1,df2) (tuple of pandas dataframes)\n",
-    "    \"\"\"\n",
-    "    dataFrame = df_column\n",
-    "    col_title = df_column.columns.get_values()[0]\n",
-    "    non_ascii_str = []\n",
-    "    non_ascii_char = []\n",
-    "    list_str_chr = []\n",
-    "    columns = ['String','Character']\n",
-    "    data_frame_curr = pd.DataFrame(columns = columns)\n",
-    "    if contains_unusual_char:\n",
-    "        for index, row in dataFrame.iterrows():\n",
-    "            non_ascii_char_string=''\n",
-    "            curr_attr = row[col_title]\n",
-    "            try:\n",
-    "                curr_attr.encode('ascii')\n",
-    "            except:\n",
-    "                for letter in curr_attr:\n",
-    "                    if ord(letter) < 32 or ord(letter) > 126: \n",
-    "                        non_ascii_str+=[curr_attr]\n",
-    "                        non_ascii_char+=[letter]\n",
-    "                        if non_ascii_char_string == '':\n",
-    "                            non_ascii_char_string = letter\n",
-    "                        else:\n",
-    "                            non_ascii_char_string= non_ascii_char_string+' , '+letter\n",
-    "                list_str_chr.append([curr_attr,non_ascii_char_string])\n",
-    "        df1 = print_unusual_str(non_ascii_str)\n",
-    "        df2 = print_mapping_unusual(list_str_chr)\n",
-    "        return (df1,df2)\n",
-    "\n",
-    "def print_unusual_str(list):\n",
-    "    \"\"\"\n",
-    "        Returns a dataframe of strings that contain unusual characters.\n",
-    "        Args:\n",
-    "            list (list): Input list\n",
-    "        Returns:\n",
-    "            unusualStringsDataFrame (pandas dataframe)\n",
-    "    \"\"\"\n",
-    "    unusualStringsDataFrame = pd.DataFrame(list,columns = ['String'])\n",
-    "    return unusualStringsDataFrame\n",
-    "\n",
-    "def print_mapping_unusual(list):\n",
-    "    \"\"\"\n",
-    "        Returns a dataframe with 2 columns of strings and the \n",
-    "        unusual characters in each.\n",
-    "        Args:\n",
-    "            list (list): Input list\n",
-    "        Returns:\n",
-    "            stringsWithUnusualChar (pandas dataframe)\n",
-    "    \"\"\"\n",
-    "    stringsWithUnusualChar = pd.DataFrame(list,columns = ['String','Unusual Character'])\n",
-    "    return stringsWithUnusualChar\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -167,7 +9,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -178,5 +20,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
